Fixed page title padding on mobile.

--- a/themes/botwiki/src/styles/styles.less
+++ b/themes/botwiki/src/styles/styles.less
@@ -63,6 +63,7 @@ h1, h2{
     background-color: #38313a;
     padding: 10px;
     line-height: 2em;
+    box-decoration-break: clone;
   }
 }
 
